--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,23 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
-    background: white;
+    background: #338c00;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
+
+
+.carta {
+    width: 300px;
+    height: 450px;
+    border: 0.5px solid #000;
+    border-radius: 15px;
+    box-shadow: 0 10px 14px rgba(0, 0, 0, 0.75);
+    font-size: 4rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    background-color: #f9f9f9;
+    background-image: url("https://www.transparenttextures.com/patterns/skulls.png");
+  }
+
+  
